[metadata]
name = camellia
version = 0.0.1


[files]
packages =
    camellia

package-data =
			 ztviolet_ui = frontend/images/*.png frontend/js/*.js frontend/js/*.map frontend/css/*.map frontend/css/*.css

data_files =
	etc/camellia = etc/camellia.conf
	bin =
		bin/camellia-gunicorn

[global]
setup-hooks =
	pbr.hooks.setup_hook

[entry_points]
console_scripts =
	camellia-db-manage = camellia.cmd.db:main
